# mental-health-analysis

./: README.md  main.py  pyproject.toml
data/processed/: processed.csv
notebooks/: main.ipynb
queries/: 01_analysis_salary_vs_satisfaction_plateau.sql  02_companysize_vs_stress.sql  03_work_location_analysis.sql  04_country_mental_health_stigma_analysis.sql
src/mental_health_analysis/: constants.py  main.py
