[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mental-health-analysis"
version = "1.0.0"
description = "A project that analyzes the mental health conditions according to a 2016 survey in tech found in kaggle."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {"name" = "nerrader", email = "nerrader@proton.me"}
] 
dependencies = [
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "ruff>=0.15.20",
]

[project.scripts]
start = "mental_health_analysis.main:main"
